adding lots of new stuff

--- a/client/named-entity-recognition/src/App.css
+++ b/client/named-entity-recognition/src/App.css
@@ -1,6 +1,10 @@
 .themed-container {
-  margin: 20px;
-  border: 1px solid black;
-  width: 80vw;
-  height: 60vh;
+  margin: 40px 60px;
+  /* border: 1px solid black; */
+  /* width: 80vw; */
+  /* height: 60vh; */
+}
+
+.input-text {
+  height: 400px;
 }
